--- a/cooperacion-web/src/main/webapp/resources/template/plantilla_bk.xhtml
+++ b/cooperacion-web/src/main/webapp/resources/template/plantilla_bk.xhtml
@@ -49,7 +49,7 @@
             </div>        
         </div>
 
-        <!--p:ajaxStatus>
+        <p:ajaxStatus>
             <f:facet name="default">
 
             </f:facet>
@@ -64,7 +64,7 @@
             <f:facet name="complete">
                 <h:outputText value="" />
             </f:facet>
-        </p:ajaxStatus-->
+        </p:ajaxStatus>
         
         <h:form>
             <p:idleMonitor onactive="PF('sessionTimeOutDialog').show();" timeout="1500000" >
