--- a/cooperacion-web/src/main/webapp/resources/css/main.css
+++ b/cooperacion-web/src/main/webapp/resources/css/main.css
@@ -36,19 +36,8 @@
     margin: auto;
     width:60px;
     height: 60px;
-    z-index:1000; text-align: center; background: white;
-}
-
-#ajax_gif2{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left:0;
-    right:0;
-    margin: auto;
-    width:500px;
-    height: 150px;
-    z-index:1000; text-align: center; background: white;
+    z-index:1000; 
+    text-align: center;
 }
 
 #divCaptcha > div {
