--- a/cooperacion-web/src/main/webapp/resources/template/plantilla.xhtml
+++ b/cooperacion-web/src/main/webapp/resources/template/plantilla.xhtml
@@ -79,7 +79,7 @@
 
         <p:ajaxStatus style="position:fixed;right:60px;bottom:30px">
             <f:facet name="default">
-
+                <h:outputText value=""/>
             </f:facet>
             <f:facet name="start">
                 <div id="div_modal" class="layout-content ui-widget-overlay ui-dialog-mask" ></div>
@@ -90,7 +90,7 @@
             </f:facet>
 
             <f:facet name="complete">
-
+                <h:outputText value=""/>
             </f:facet>
         </p:ajaxStatus>
         <div class="layout-mask modal-in"></div>
